--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,10 @@
   @@include('html/head.html', {
     'title': 'Главная'
   })
-  <body>
-    <div class="wrapper">
-      @@include('html/header.html', {})
-      <main class="page">
-        <div data-observ></div>
-        
-      </main>
-      @@include('html/footer.html', {})
-    </div>
+  <body class="wrapper">
+    @@include('html/header.html', {})
+      
+    @@include('html/footer.html', {})
     @@include('html/script.html', {})
   </body>
 </html> 
