Add block, rename images

--- a/src/index.html
+++ b/src/index.html
@@ -414,6 +414,70 @@
         <div class="awning-cutting__gallery__item"><img src="images/photos/12.png" alt="" /></div>
       </div>
     </div>
+    <div class="flexible-sandwich full-width wrapper">
+      <img
+        src="images/flexible-sandwich/logo.png"
+        alt="«ГИБКИЙ СЭНДВИЧ»"
+        class="flexible-sandwich__logo" />
+      <div class="container">
+        <h2 class="title title_border">Тентовая структура «Гибкий сэндвич»</h2>
+        <div class="flexible-sandwich__text">
+          <p>
+            Собственная запатентованная разработка компании «ЭВРИАЛ»: особый вид ограждающих
+            конструкций, состоящий из двух слоёв тентовой ткани и минераловатного утеплителя между
+            ними
+          </p>
+        </div>
+        <div class="product">
+          <li class="product__layer">
+            <span>1</span>
+            Верхний слой – многослойная изолирующая ПВХ-мембрана
+          </li>
+          <li class="product__layer">
+            <span>2</span>
+            Средний слой – минераловатный утеплитель различной толщины
+          </li>
+          <li class="product__layer">
+            <span>3</span>
+            Нижний слой – многослойная изолирующая ПВХ мембрана
+          </li>
+          <div class="product__img">
+            <img
+              src="images/flexible-sandwich/flexible-sandwich.png"
+              alt="ТЕСТОВАЯ СТРУКТУРА
+              «ГИБКИЙ СЭНДВИЧ»" />
+          </div>
+        </div>
+        <hr class="flexible-sandwich__delimeter" />
+        <div class="flexible-sandwich__advantages">
+          <div class="flexible-sandwich__advantages__item">
+            <div class="flexible-sandwich__advantages__item__title">
+              в
+              <span>1,5</span>
+              раза
+            </div>
+            <p>сокращение сроков реализации проекта</p>
+          </div>
+          <div class="flexible-sandwich__advantages__item">
+            <div class="flexible-sandwich__advantages__item__title">
+              до
+              <span>30</span>
+              %
+            </div>
+            <p>ниже затраты на монтаж</p>
+          </div>
+          <div class="flexible-sandwich__advantages__item">
+            <div class="flexible-sandwich__advantages__item__title">
+              до
+              <span>200</span>
+              м
+              <sup>2</sup>
+            </div>
+            <p>площадь панелей «ГИБКОГО СЭНДВИЧА» - меньше срок монтажа</p>
+          </div>
+        </div>
+      </div>
+    </div>
     @@include('html/footer.html', {}) @@include('html/script.html', {})
   </body>
 </html>
