--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,94 @@
         </div>
       </div>
     </div>
+    <div class="buildings-advantages full-width wrapper">
+      <div class="buildings-advantages__title full-width wrapper">
+        <h2 class="title title_border">
+          Преимущества полнокомплектных зданий
+          <br />
+          <span>
+            Вы получаете здание под ключ с оборудованием и инженерными системами от одного
+            поставщика, который несет ответственность за весь комплект поставки
+          </span>
+        </h2>
+      </div>
+      <div class="buildings-advantages__list">
+        <div class="buildings-advantages__item">
+          <span>01</span>
+          <p>
+            Сокращение времени строительства - полная заводская готовность всех элементов системы
+          </p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>02</span>
+          <p>Возможность многократного использования Долговечность (больше 30 лет)</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>03</span>
+          <p>Универсальность применения</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>04</span>
+          <p>Простота монтажа - точность и качество деталей каркаса и ограждающих конструкций</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>05</span>
+          <p>Огнестойкость, пожаробезопасность, экологичность</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>06</span>
+          <p>Малый вес конструкций - без фундаментов глубокого заложения</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>07</span>
+          <p>Короткие сроки поставки</p>
+        </div>
+        <div class="buildings-advantages__item">
+          <span>08</span>
+          <p>Разнообразные решения фасадов (утепленные здания по технологии «Гибкий сэндвич»)</p>
+        </div>
+      </div>
+      <div class="buildings-advantages__constructions">
+        <div>
+          <h2 class="title title_border">Все виды конструкций</h2>
+          <p>
+            Стальные сборно-разборные металлоконструкции для объектов авиационного, спортивного,
+            промышленного, сельскохозяйственного, складского назначения, портовой инфраструктуры
+            <br />
+            <br />
+            Производственная компания “Эвриал” изготавливает каркасы на основе ЛМК (легких
+            металлоконструкций) как по типовым, так и по индивидуальным проектам.
+          </p>
+        </div>
+        <div class="buildings-advantages__slider">
+          <div class="swiper" js-constructions-slider>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="images/constructions/01.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/02.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/03.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/04.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/05.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/06.png" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="images/constructions/07.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     @@include('html/footer.html', {}) @@include('html/script.html', {})
   </body>
 </html>
