--- a/src/index.html
+++ b/src/index.html
@@ -566,6 +566,47 @@
         </div>
       </div>
     </div>
+    <div class="advantages full-width wrapper">
+      <h2 class="title title_border">Наши преимущества</h2>
+      <div class="advantages__list full-width">
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/like.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Использование премиальных ПВХ тканей</p>
+        </div>
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/document.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Контроль ОТК на всех этапах производства</p>
+        </div>
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/home.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Поставка полнокомплектных зданий</p>
+        </div>
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/check.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Гарантия качества и сроков доставки</p>
+        </div>
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/baloon.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Регионы работы: вся Россия и страны СНГ</p>
+        </div>
+        <div class="advantages__item">
+          <img src="images/figure.png" alt="" />
+          <img src="images/icons/diagram.png" alt="" class="advantages__item__icon" />
+          <img src="images/gradient.png" alt="" class="advantages__item__gradient" />
+          <p>Снижение зависимости от импортных решений</p>
+        </div>
+      </div>
+    </div>
     @@include('html/footer.html', {}) @@include('html/script.html', {})
   </body>
 </html>
