--- a/src/html/header.html
+++ b/src/html/header.html
@@ -19,42 +19,42 @@
       </div>
       <div class="header__menu__item"><a href="#services">Услуги</a></div>
       <div class="header__menu__item">
-        <a href="#portfolio">
+        <span>
           Портфолио
           <svg class="icon">
             <use xlink:href="images/icons/icons.svg#chevron-bottom"></use>
           </svg>
-        </a>
+        </span>
         <div class="header__menu__sub">
-          <a href="#">Складские сооружения</a>
-          <a href="#">Авиационные ангары</a>
-          <a href="#">Сельскохозяйственные укрытия</a>
-          <a href="#">Производственные здания</a>
+          <a href="#portfolio1">Складские сооружения</a>
+          <a href="#portfolio2">Авиационные ангары</a>
+          <a href="#portfolio3">Сельскохозяйственные укрытия</a>
+          <a href="#portfolio4">Производственные здания</a>
         </div>
       </div>
       <div class="header__menu__item">
-        <a href="#manufacturing">
+        <span>
           Производство
           <svg class="icon">
             <use xlink:href="images/icons/icons.svg#chevron-bottom"></use>
           </svg>
-        </a>
+        </span>
         <div class="header__menu__sub">
-          <a href="#">Цех металлоконструкций</a>
-          <a href="#">Цех по раскрою тента</a>
+          <a href="#shop1">Цех металлоконструкций</a>
+          <a href="#shop2">Цех по раскрою тента</a>
         </div>
       </div>
       <div class="header__menu__item">
-        <a href="#production">
+        <span>
           Продукция
           <svg class="icon">
             <use xlink:href="images/icons/icons.svg#chevron-bottom"></use>
           </svg>
-        </a>
+        </span>
         <div class="header__menu__sub">
-          <a href="#">Гибкий сэндвич</a>
-          <a href="#">Полнокомплектные здания</a>
-          <a href="#">Металлоконструкции</a>
+          <a href="#sandwich">Гибкий сэндвич</a>
+          <a href="#complete-buildings">Полнокомплектные здания</a>
+          <a href="#constructions">Металлоконструкции</a>
         </div>
       </div>
       <div class="header__menu__item">
@@ -65,8 +65,8 @@
           </svg>
         </a>
         <div class="header__menu__sub">
-          <a href="#">Реквизиты</a>
-          <a href="#">Сертификаты</a>
+          <a href="#requisites">Реквизиты</a>
+          <a href="#certificates">Сертификаты</a>
         </div>
       </div>
       <a href="#form" class="button button_yellow">Заявка на расчёт</a>
