--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,34 @@
-<footer class="footer">
+<footer class="footer full-width wrapper">
   <div class="footer__container">
-    
+    <div class="footer__left">
+      <img src="images/logo-white.png" alt="" />
+      <p>
+        <strong>ООО «ПРОИЗВОДСТВЕННАЯ КОМПАНИЯ ЭВРИАЛ»</strong>
+        /
+        <strong>ИНН</strong>
+        : 5044116851 /
+        <strong>ОГРН</strong>
+        : 1195081061988
+      </p>
+      <p>
+        <a href="#" id="requisites">Реквизиты</a>
+        /
+        <a href="#" id="certificates">Сертификаты</a>
+      </p>
+    </div>
+    <div class="footer__right">
+      <a href="#back-call" class="button button_white">Заказать звонок</a>
+      <div class="footer__socials">
+        <a href="#" target="_blank">
+          <img src="images/icons/vk.png" alt="" />
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/icons/tg.png" alt="" />
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/icons/dzen.png" alt="" />
+        </a>
+      </div>
+    </div>
   </div>
 </footer>
